...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gch-4Y-ezB">
                                <rect key="frame" x="195" y="472" width="100" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="SXp-3w-0o4"/>
                                    <constraint firstAttribute="width" constant="100" id="Tve-KY-2VD"/>
                                </constraints>
                                <state key="normal" title="Cute"/>
                                <connections>
                                    <action selector="cuteButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ayE-8O-gvH"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n38-ac-XDP">
                                <rect key="frame" x="326" y="472" width="100" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="MyE-qj-PJy"/>
                                    <constraint firstAttribute="height" constant="45" id="ybt-yh-XwY"/>
                                </constraints>
                                <state key="normal" title="Meh"/>
                                <connections>
                                    <action selector="uglyButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="E6v-wd-Ri6"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
...
