...
            }
        }
    }
    
    private func showResults() {
        let (upvotes, downvotes) = scoreKeeper.score()
        let title = "Results"
        let message = "You voted for \(upvotes) cute bunnies and \(downvotes) ugly bunnies"
        
        let alert = UIAlertController.init(title: title, message: message, preferredStyle: .Alert)
        let action = UIAlertAction.init(title: title, style: .Default) { (action) -> Void in
            self.hideBunny()
        }
...
